--- a/gb/19/12/2/n11694915.md
+++ b/gb/19/12/2/n11694915.md
@@ -1,61 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/ijwoue2416/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/ijwoue2416/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ë«ÊÓºó¡¶Ïë¼ûÄã¡·½»ÊÖ ÑÏÒÕÎÄÏëÑ§¿Â¼Ñ‹÷·ÅËÉ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/12/1912020335491487-600x400.jpg" />
-<h6>½ðÖÓ½±Ë«ÊÓºóÍ¬Ì¨½»ÊÖ£¬ÑÏÒÕÎÄ£¨ÓÒ£©Á¦¿ä¿Â¼Ñ‹÷£¨×ó£©ÓÐ´ó½«Ö®·ç¡£Í¼Îª¡¶Ïë¼ûÄã¡·¾çÕÕ¡££¨ÖÐÊÓÌá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oqudue369/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>åŒè§†åŽã€Šæƒ³è§ä½ ã€‹äº¤æ‰‹ ä¸¥è‰ºæ–‡æƒ³å­¦æŸ¯ä½³å¬¿æ”¾æ¾</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/1912020335491487-600x400.jpg" />
+<h6>é‡‘é’Ÿå¥–åŒè§†åŽåŒå°äº¤æ‰‹ï¼Œä¸¥è‰ºæ–‡ï¼ˆå³ï¼‰åŠ›å¤¸æŸ¯ä½³å¬¿ï¼ˆå·¦ï¼‰æœ‰å¤§å°†ä¹‹é£Žã€‚å›¾ä¸ºã€Šæƒ³è§ä½ ã€‹å‰§ç…§ã€‚ï¼ˆä¸­è§†æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ02ÈÕÑ¶¡¿Ì¨¾ç¡¶<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%83%B3%E8%A7%81%E4%BD%A0.md">Ïë¼ûÄã</a>¡·ÖÆ×÷½²¾¿£¬Ã¿¸ö½ÇÉ«µÄÑÝÔ±¶¼ÊÇ¾«ÌôÏ¸Ñ¡£¬ÏñÊÇ¾çÖÐÊÎÑÝ<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%9F%AF%E4%BD%B3%E5%AC%BF.md">¿Â¼Ñ‹÷</a>ºÍ´óº×ÂèÂèÒ»½Ç£¬¾ÍÊÇÒÔ¡¶ÌìÊ¹µÄÊÕÒô»ú¡·ÈÙ»ñµÚ50½ì½ðÖÓ½±ÃÔÄã¾ç¼¯£¨µçÊÓµçÓ°£©Å®Ö÷½Ç½±µÄ<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E4%B8%A5%E8%89%BA%E6%96%87.md">ÑÏÒÕÎÄ</a>£¬ÓëÍ¬ÊÇÄÃ¹ý½ðÖÓ½±×î¼ÑÅ®Ö÷½Ç½±µÄ<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%9F%AF%E4%BD%B3%E5%AC%BF.md">¿Â¼Ñ‹÷</a>Í¬¾çì­Ï·¡£</p>
-<p><a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E4%B8%A5%E8%89%BA%E6%96%87.md">ÑÏÒÕÎÄ</a>Á¦¿ä¿Â¼Ñ‹÷ÓÐ´ó½«Ö®·ç£¬»¹Ëµ×Ô¼ºÅÄÉãÊ±Ì«°®Ó²³Å£¬¡°Òª¸ú¿Â¼Ñ‹÷Ñ§Ï°·ÅËÉÅÄÏ·¡±¡£</p>
-<p>ÑÝ¹ýÐí¶à²¿×÷Æ·£¬Ò²¶¼ÊÇÎªÈËÄ¸½ÇÉ«£¬ÑÏÒÕÎÄÕâ´Î½ÓÏÂÕâ²¿Ï·Ô¼Ô­Òò£¬Õâ½ÇÉ«²»Í¬Ò»°ãÏÍ»Û´«Í³µÄÂèÂè£¬¶øÊÇÎªÁË¶ÀÁ¢·öÑøÁ½¸öÐ¡º¢£¬±ØÐë¾­Óª¿¨À­OKµê£¬Ã¿ÌìºÈ×íµ¹ÔÚÉ³·¢ÉÏ¡£</p>
-<p>ÑÏÒÕÎÄ¿´¾ç±¾Ê±¾õµÃÕâ½ÇÉ«ºÜÓÐÈ¤£¬ÓÚÊÇÏëÊÔÊÔ¿´¡£Ö»ÊÇ¾¿¾¹ÈçºÎ´§Ä¦£¬ÑÏÒÕÎÄÍ¸Â¶£¬¡°ÎÒÃ»ÓÐÕæµÄÉú¹ýÐ¡º¢£¬Ã»°ì·¨°Ù·Ö°ÙÍêÈ«Àí½âµ±Ä¸Ç×»áÊÇÊ²Ã´ÑùµÄÒ»¸öÐÄÌ¬£¬ÎÒ×Ô¼º¶¼ºÃÆæ£¬µ«ÓÐÑø¹ý³èÎï£¬¼ÓÉÏÑÝÔ±ÓÐÒ»ÖÖ¸ÐÍ¬ÉíÊÜµÄÄÜÁ¦¡£¡±</p>
-<p>³ÐÈÏ×Ô¼ºÊÇÊôÓÚÂýÈÈÐÍÑÝÔ±µÄÑÏÒÕÎÄ£¬±»ÎÊµ½ÈçºÎ¸úÁ½¸öº¢×ÓÅàÑø¡°Ç×¡±Çé£¬ËýËµÒòÎªÖ®Ç°¾ÍºÍ¿Â¼Ñ‹÷ºÏ×÷¹ýÒÑÈÏÊ¶£¬·´¶øºÍ´óº×Ã»Ò»ÆðÅÄ¹ýÏ·£¬¼ÓÉÏÏ·¼¯ÖÐÃÜ¼¯ÅÄ£¬ËùÒÔµ±Ê±ÓÐÒ»Á½¸öÐÇÆÚ£¬´ó¼Ò¶¼ÊÇÌìÌìÉú»îÔÚÒ»Æð¡£</p>
-<p>ÑÏÒÕÎÄÌØ±ð¿äÔÞ¿Â¼Ñ‹÷ºÜ»áÕÕ¹ËÈË£¬¡°¶¼´ø·Ç³£¶àµÄÊ³Îï£¬Ê³Îï»¹¶¼ÊÇ·Ç³£½¡¿µµÄ£¬ÏñÊÇÓÐÏã½¶¡¢Êß²Ë£¬´óº×¶¼Ò»Ö±³Ô¡±£¬ËùÒÔÅÄÉãÆø·Õ¶¼·Ç³£ºÃ£¬Ò²ºÜË³Àû¡£Õâ´ÎºÏ×÷ÑÏÒÕÎÄ¾õµÃ¿Â¼Ñ‹÷´Ó¡¶±ØÈ¢Å®ÈË¡·¾ÍÒÑ¾­¿ªÊ¼ÓÐ´ó½«Ö®·ç£¬Ò²Á¦ÔÞËý¶ÔÓÚ½ÇÉ«µÄÚ¹ÊÍÓÐ×Ô¼ºµÄ¶Àµ½¼û½â¡£</p>
-<p>ËäÈ»ÉíÎªÇ°±²£¬ÑÏÒÕÎÄÔÚÅÄÉãÊ±ÈÔ»á´ÓÅÔ¹Û²ì£¬Ëý¾õµÃ¿Â¼Ñ‹÷ÔÚÆ¬³¡Ëù±£³ÖµÄÄÇÖÖ·Ç³£·ÅËÉµÄ×´Ì¬£¬ÊÇËýÒ²ºÜÐèÒªÑ§Ï°µÄÒ»µã¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ02æ—¥è®¯ã€‘å°å‰§ã€Š<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E6%83%B3%E8%A7%81%E4%BD%A0.md#1">æƒ³è§ä½ </a>ã€‹åˆ¶ä½œè®²ç©¶ï¼Œæ¯ä¸ªè§’è‰²çš„æ¼”å‘˜éƒ½æ˜¯ç²¾æŒ‘ç»†é€‰ï¼Œåƒæ˜¯å‰§ä¸­é¥°æ¼”<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E6%9F%AF%E4%BD%B3%E5%AC%BF.md#1">æŸ¯ä½³å¬¿</a>å’Œå¤§é¹¤å¦ˆå¦ˆä¸€è§’ï¼Œå°±æ˜¯ä»¥ã€Šå¤©ä½¿çš„æ”¶éŸ³æœºã€‹è£èŽ·ç¬¬50å±Šé‡‘é’Ÿå¥–è¿·ä½ å‰§é›†ï¼ˆç”µè§†ç”µå½±ï¼‰å¥³ä¸»è§’å¥–çš„<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E4%B8%A5%E8%89%BA%E6%96%87.md#1">ä¸¥è‰ºæ–‡</a>ï¼Œä¸ŽåŒæ˜¯æ‹¿è¿‡é‡‘é’Ÿå¥–æœ€ä½³å¥³ä¸»è§’å¥–çš„<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E6%9F%AF%E4%BD%B3%E5%AC%BF.md#1">æŸ¯ä½³å¬¿</a>åŒå‰§é£™æˆã€‚</p>
+<p><ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E4%B8%A5%E8%89%BA%E6%96%87.md#1">ä¸¥è‰ºæ–‡</a>åŠ›å¤¸æŸ¯ä½³å¬¿æœ‰å¤§å°†ä¹‹é£Žï¼Œè¿˜è¯´è‡ªå·±æ‹æ‘„æ—¶å¤ªçˆ±ç¡¬æ’‘ï¼Œâ€œè¦è·ŸæŸ¯ä½³å¬¿å­¦ä¹ æ”¾æ¾æ‹æˆâ€ã€‚</p>
+<p>æ¼”è¿‡è®¸å¤šéƒ¨ä½œå“ï¼Œä¹Ÿéƒ½æ˜¯ä¸ºäººæ¯çš„è§’è‰²ï¼Œä¸¥è‰ºæ–‡è¿™æ¬¡æŽ¥ä¸‹è¿™éƒ¨æˆçº¦åŽŸå› ï¼Œæ˜¯å› ä¸ºè¿™è§’è‰²ä¸åŒä¸€èˆ¬è´¤æ…§ä¼ ç»Ÿçš„å¦ˆå¦ˆï¼Œè€Œæ˜¯ä¸ºäº†ç‹¬ç«‹æ‰¶å…»ä¸¤ä¸ªå°å­©ï¼Œå¿…é¡»ç»è¥å¡æ‹‰OKåº—ï¼Œæ¯å¤©å–é†‰å€’åœ¨æ²™å‘ä¸Šã€‚</p>
+<p>ä¸¥è‰ºæ–‡çœ‹å‰§æœ¬æ—¶è§‰å¾—è¿™è§’è‰²å¾ˆæœ‰è¶£ï¼ŒäºŽæ˜¯æƒ³è¯•è¯•çœ‹ã€‚åªæ˜¯ç©¶ç«Ÿå¦‚ä½•æ£æ‘©ï¼Œä¸¥è‰ºæ–‡é€éœ²ï¼Œâ€œæˆ‘æ²¡æœ‰çœŸçš„ç”Ÿè¿‡å°å­©ï¼Œæ²¡åŠžæ³•ç™¾åˆ†ç™¾å®Œå…¨ç†è§£å½“æ¯äº²ä¼šæ˜¯ä»€ä¹ˆæ ·çš„ä¸€ä¸ªå¿ƒæ€ï¼Œæˆ‘è‡ªå·±éƒ½å¥½å¥‡ï¼Œä½†æœ‰å…»è¿‡å® ç‰©ï¼ŒåŠ ä¸Šæ¼”å‘˜æœ‰ä¸€ç§æ„ŸåŒèº«å—çš„èƒ½åŠ›ã€‚â€</p>
+<p>æ‰¿è®¤è‡ªå·±æ˜¯å±žäºŽæ…¢çƒ­åž‹æ¼”å‘˜çš„ä¸¥è‰ºæ–‡ï¼Œè¢«é—®åˆ°å¦‚ä½•è·Ÿä¸¤ä¸ªå­©å­åŸ¹å…»â€œäº²â€æƒ…ï¼Œå¥¹è¯´å› ä¸ºä¹‹å‰å°±å’ŒæŸ¯ä½³å¬¿åˆä½œè¿‡å·²è®¤è¯†ï¼Œåè€Œå’Œå¤§é¹¤æ²¡ä¸€èµ·æ‹è¿‡æˆï¼ŒåŠ ä¸Šæˆé›†ä¸­å¯†é›†æ‹ï¼Œæ‰€ä»¥å½“æ—¶æœ‰ä¸€ä¸¤ä¸ªæ˜ŸæœŸï¼Œå¤§å®¶éƒ½æ˜¯å¤©å¤©ç”Ÿæ´»åœ¨ä¸€èµ·ã€‚</p>
+<p>ä¸¥è‰ºæ–‡ç‰¹åˆ«å¤¸èµžæŸ¯ä½³å¬¿å¾ˆä¼šç…§é¡¾äººï¼Œâ€œéƒ½å¸¦éžå¸¸å¤šçš„é£Ÿç‰©ï¼Œé£Ÿç‰©è¿˜éƒ½æ˜¯éžå¸¸å¥åº·çš„ï¼Œåƒæ˜¯æœ‰é¦™è•‰ã€è”¬èœï¼Œå¤§é¹¤éƒ½ä¸€ç›´åƒâ€ï¼Œæ‰€ä»¥æ‹æ‘„æ°”æ°›éƒ½éžå¸¸å¥½ï¼Œä¹Ÿå¾ˆé¡ºåˆ©ã€‚è¿™æ¬¡åˆä½œä¸¥è‰ºæ–‡è§‰å¾—æŸ¯ä½³å¬¿ä»Žã€Šå¿…å¨¶å¥³äººã€‹å°±å·²ç»å¼€å§‹æœ‰å¤§å°†ä¹‹é£Žï¼Œä¹ŸåŠ›èµžå¥¹å¯¹äºŽè§’è‰²çš„è¯ é‡Šæœ‰è‡ªå·±çš„ç‹¬åˆ°è§è§£ã€‚</p>
+<p>è™½ç„¶èº«ä¸ºå‰è¾ˆï¼Œä¸¥è‰ºæ–‡åœ¨æ‹æ‘„æ—¶ä»ä¼šä»Žæ—è§‚å¯Ÿï¼Œå¥¹è§‰å¾—æŸ¯ä½³å¬¿åœ¨ç‰‡åœºæ‰€ä¿æŒçš„é‚£ç§éžå¸¸æ”¾æ¾çš„çŠ¶æ€ï¼Œæ˜¯å¥¹ä¹Ÿå¾ˆéœ€è¦å­¦ä¹ çš„ä¸€ç‚¹ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/2/n11694915.htm">Ë«ÊÓºó¡¶Ïë¼ûÄã¡·½»ÊÖ ÑÏÒÕÎÄÏëÑ§¿Â¼Ñ‹÷·ÅËÉ</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/20/n11668509.htm">¿Â¼Ñ‹÷ÐÂ¾ç°ç¸ßÖÐÉú ×ÔÆØÅÄÏ·Í¶Èë¶Ô¼ÒÈËÈÎÐÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/12/n11650209.htm">ÎºÈçÝæÍÆÐÂ×÷ Ñû¿Â¼Ñ‹÷¿Ü¼ÒÈðÑÝÒï¡¶¿Ö»ÅÖ¢¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/23/n11207788.htm">¡°»éÒö¾ÍÊÇÐÞÂÞ³¡¡±¿Â¼Ñ‹÷¡¢ÀîÀîÈÊ³©Ì¸¾­Ñé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/9/n11173179.htm">ÓëÕÅÊéºÀºÏÑÝÐÂ¾ç ¿Â¼Ñ‹÷´ÓÑ§ÉúÃÃÑÝµ½ÉÙ¸¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/6/n10695557.htm">ÑÏÒÕÎÄ½ÇÖð½ðÖÓÊÓºó£ºÑÝºÜÓÐ·ç¶ÈºÜÍ´¿à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/10/28/n9779400.htm">ÑÏÒÕÎÄÔÞÁÖÐÄÈç¾ç×éÐ§ÂÊ¸ß µ£ÐÄ»»¾ç×éÄÑÊÊÓ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/20/n8118463.htm">ÑÏÒÕÎÄ¼ûµ½ÈËÈðÖ÷½ÇÏë¿Þ ÒâÍâÉÏÁËÌÃÐ¢Ç×¿Î</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/9/28/n4538064.htm">ÑÏÒÕÎÄÃÔÄã¾ç½ðÖÓ·âºó ¾¹Ôâ¸¸Ç×Ñµ»°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/21/n4347718.htm">ÏÄÓÚÇÇÄæÁäÑÝ18Ëê ÑÏÒÕÎÄ³ÉÂèÂè×¨ÓÃ»§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/14/10/25/n4280300.htm">ÑÏÒÕÎÄÎª½ðÖÓ¼õ12¹«½ï °ÚÍÑ´óÂèÐÎÏó</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11692526.htm">¡¾·­Ç½±Ø¿´¡¿Â½¸ßÌúÆ±ÓÖ´òÕÛ ±³ºóÕæÏà¾ªÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693668.htm">¡¾¶À¼Ò¡¿Ï°½üÆ½Ä»ÁÅ³ÆÖÐ¹²ÒÑ×ßÍ¶ÎÞÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693427.htm">ÖÐ¹²Ö¸ÔðÒâ¹ú»áÑû»ÆÖ®·æÑÝËµ ÒýÐùÈ»´ó²¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693459.htm">ÖÐ°ì¸±Ö÷ÈÎº«Á¢Æ½±»±áÈÎ¹©Ïú×ÜÉç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671483.htm">¡°ËÄ´ó½Ô¿Õ¡±ÊÇÄÄËÄ´ó¿Õ£¿ ½ÌÈËÎòÊ²Ã´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/24/n11677626.htm">¡¾ÀúÊ·»Øíø¡¿ÂÒÊÀÐÐ´ºÇïÊÂ Ãð¹²ËàµýµÄ´÷óÒ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/5/1/n3859658.htm">ËØÎ´Ä±ÃæµÄÁ½ÈË   Ò»ÅµÇ§½ðÊØ°ëÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/22/n11674913.htm">ÕâÐ©Çå³¯¹ÙÔ±¼ÇµÃÇ°ÊÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690714.htm">¸ßÒÔÏèâ§ÊÅ Ô¬Á¢³âÔð½ÚÄ¿·½£º»¹Ç·ÎÒÒ»¸öµÀÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690472.htm">Ïã¸Û·¨°¸ÉúÐ§¹ÄÎè¸ÛÈË ºÎÔÏÊ«£ºÏÂÒ»Õ¾Ó¢¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690316.htm">µ¿ÄîÒÑ¹ÊºÃÓÑ¸ßÒÔÏè ÁÖÊéºÀ´©ÌØÖÆÕ½Ñ¥²ÎÈü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690452.htm">åûÓê¼°Ì©ºÓÍËÍÅ MOMOLANDÊ£6ÈËÔçÓÐ¼£Ïó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691706.htm">2019ÑÇÖÞÊ±ÉÐ´óÉÍ ·´î®Â¡Ê·Óë¼Ö¾²ö©Í¬Ì¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690413.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸Û·¨ÖÐ¹²Ç¿ÁÒ·´µ¯ Ò»²¿ÃÅ³ÁÄ¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11692021.htm">¡¾ÐÂÎÅ¿´µã¡¿ÐÂÎÅ¿´µã¸Ð¶÷´ðÐ» »Ø¸´ÍøÓÑÌáÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690272.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©×îµ£ÐÄµÄÀ´ÁË Î÷·½ËæÃÀÖÆ²Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690714.htm">¸ßÒÔÏèâ§ÊÅ Ô¬Á¢³âÔð½ÚÄ¿·½£º»¹Ç·ÎÒÒ»¸öµÀÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11690947.htm">ÍõÐÐ£º¡°µ¹¸ê¡±ÊÇÖÐ¹²¸²ÃðÇ°ÈÃÈË¾ªÏ²µÄÒ»Ä»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691219.htm">²ÜµÂÍú£º´óÂ½Êµ¼ÊÓÐÏû·ÑÄÜÁ¦Õß²»×ã3ÒÚÈË</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/14/2/16/n4084481.md#1">ä¸¥è‰ºæ–‡æ€•æŠ“é¸¡ å¼€æ‹æ—¶å…¨èº«æŠ–çœ¼çœ¶çº¢</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/14/2/24/n4090861.md#1">ä¸¥è‰ºæ–‡æ¼”è‰¯å¦‡æ‰®ç›¸åœŸ å¤§å¹ä¸ºæˆå‡è‚¥ä¸å€¼</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/14/3/17/n4108474.md#1">å¾ä¸½é›¯ä¸Žä¸¥è‰ºæ–‡  æˆé‡Œæˆå¤–äº¤æ‰‹ç²¾å½©</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/14/10/25/n4280300.md#1">ä¸¥è‰ºæ–‡ä¸ºé‡‘é’Ÿå‡12å…¬æ–¤ æ‘†è„±å¤§å¦ˆå½¢è±¡</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/19/12/2/n11694915.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šå®£å¯¼æš´åŠ›æ€æˆ®çš„å½­æ¹ƒ</a></li><li><a href="https://github.com/oqudue369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">åšæŒåœ¨å¢æ£®å ¡å…¬å›­ç‚¼åŠŸ æ³•å›½æ³•è½®åŠŸå­¦å‘˜è°ˆæ„Ÿå—</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">ä¸Šæµ·æš´é›¨â€œä¸­å›½ç¬¬ä¸€é«˜æ¥¼â€å¤šå±‚æ¥¼æ¼æ°´ä¸¥é‡</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237074.md#1">41å²ç”·æ˜ŸæŸ“ç–«é­æˆªè‚¢ æ²»ç–—æ•°æœˆä»ä¸æ•Œç—…é­”</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236101.md#1">çºµæ¨ªç ´è§£ï¼šé¢„è¨€ä¸Žäººç”Ÿï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236774.md#1">åŽ†ç»ç£¨ç º æ‰ä¼šå½¢æˆé™æ°”å®‰ç„¶çš„çç </a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/2/n11694915.htm">åŒè§†åŽã€Šæƒ³è§ä½ ã€‹äº¤æ‰‹ ä¸¥è‰ºæ–‡æƒ³å­¦æŸ¯ä½³å¬¿æ”¾æ¾</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/19/12/2/n11694915.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
